--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -21,7 +21,7 @@
 		          </div>
 		
 		          <div class="login-form">
-		          	<p><small style="color:#666">Enter a nickname to join. If you want to become admin use the password 'rockandroll'</small></p>
+		          	<p><small style="color:#666">Enter a nickname to join</small></p>
 		          	<form method="post" action="/login">
 			            <div class="form-group">
 			              <input type="text" class="form-control login-field" placeholder="Enter your name" name="username" />
